--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,15 @@
 <h1>Sign Up</h1> 
+
+<%= form_for(@user) do |f| %>
+  
+  <%= f.label :user_name %>
+  <%= f.text_field :user_name %>
+  <br>
+  <%= f.label :password %>
+  <%= f.password_field :password %>
+  <br>
+
+
+  <%= f.submit "Submit" %>
+
+<% end %>
