--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Sign Up</h1> 
 
-<%= form_for(@user) do |f| %>
+<%= form_for(@user, url:'/signup') do |f| %>
   
   <%= f.label :user_name %>
   <%= f.text_field :user_name %>
