--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,3 @@
-<h1><%= @user.user_name %> Show Page</h1>
+<h1>Welcome <%= @user.user_name %>!</h1>
+
+<%= link_to "Logout", logout_path, method: "delete"  %>
