--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,17 @@
 
   <body>
 
-    <div>
-      <%= link_to "Sign In", signup_path %> |
-      <%= link_to "Log In", login_path %> |
-      <%= link_to "Logout", logout_path, method: "delete"  %>
+    <div> 
+      <% if logged_in? %>
+        <%= link_to "Logout", logout_path, method: "delete"  %>
+      <% else %>
+        <%= link_to "Sign Up", signup_path %> |
+        <%= link_to "Log In", login_path %>
+      <% end %>
     </div>
+
     <%= yield %>
+
   </body>
 
 </html>
