--- a/app/views/research_goals/index.html.erb
+++ b/app/views/research_goals/index.html.erb
@@ -1,1 +1,8 @@
 <h1>All Research Goals</h1>
+
+<ul>
+  <% @research_goals.each do |research_goal| %>
+    <li><%= research_goal.name%> -- <%= research_goal.description %></li>
+  <%end%>
+
+</ul>
