Changed flash message to instance variable to prevent it persisting too long, since a redirect was not used. Added links to research goal show pages from research goal index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,11 @@
       <% end %>
     </div>
 
-    <div><%= flash[:message] if flash[:message]%></div>
+    <div>
+      <%= flash[:message] if flash[:message]%>
+      <%= @error %>
+    </div>
+    
 
     <%= yield %>
 
