--- a/app/views/research_goals/show.html.erb
+++ b/app/views/research_goals/show.html.erb
@@ -1,1 +1,3 @@
 <h1> Research Goal: <%= @research_goal.name %> </h1>
+
+<p><%= link_to 'See all resources', research_goal_resources_path(@research_goal) %></p>
