modified form to create resource from show page to use research goal and resource, modified create action for resources.

--- a/app/views/research_goals/show.html.erb
+++ b/app/views/research_goals/show.html.erb
@@ -1,3 +1,4 @@
 <h1> Research Goal: <%= @research_goal.name %> </h1>
 
-<p><%= link_to 'See all resources', research_goal_resources_path(@research_goal) %></p>
+<p> <%= link_to 'See all resources', research_goal_resources_path(@research_goal) %> </p>
+<p> <%= link_to 'Add new resource', new_research_goal_resource_path(@research_goal) %> </p>
