--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -1,4 +1,4 @@
-<% if @research_goal %>
+<% if @resource.research_goal %>
   <h1>Add A New Resource for <%= @resource.title %> </h1>
 <% else %>
   <h1>Add A New Resource</h1>
@@ -18,7 +18,7 @@
 <% end %>
 
 
-<%= form_for ([@research_goal, @resource]) do |f| %>
+<%= form_for ([@resource.research_goal, @resource]) do |f| %>
   
     <%= f.label :title %>
     <%= f.text_field :title %>
