--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,1 +1,5 @@
 Resources index
+
+<% @resources.all.each do |resource| %>
+  <li><%= link_to resource.title, resource_path(resource) %></li>
+<% end %>
