added google omniauth

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,8 @@
         <%= link_to "Logout", logout_path, method: "delete"  %>
       <% else %>
         <%= link_to "Sign Up", signup_path %> |
-        <%= link_to "Log In", login_path %>
+        <%= link_to "Log In", login_path %> |
+        <%= link_to "Log In With Google", '/auth/google_oauth2' %>
       <% end %>
     </div>
 
