added auth method to sessions, added email column to users table.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,6 +8,9 @@
   <%= f.label :password %>
   <%= f.password_field :password %>
   <br>
+  <%= f.label :email %>
+  <%= f.text_field :email %>
+  <br>
 
   <%= f.submit "Submit" %>
 
