allowed creation of journal when creating a new resources

--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -22,10 +22,22 @@
     <%= f.label :title %>
     <%= f.text_field :title %>
     <br>
+
     <%= f.label :key_topics %>
     <%= f.text_field :key_topics %>
     <br>
+
+    <%= f.label :journal_id %>
+    <br>
+    <label for="journal_id">Choose existing journal: </label>
+    <%= f.collection_select :journal_id, Journal.all, :id, :name, :prompt => '- Select -' %>
+    
+    <%= f.label :journal_id %>
+    <%= f.text_field :journal_id %>
+
+
     <%= f.hidden_field :research_goal_id %>
+    <br>
   
   <%= f.submit "Add Resource" %>
    
