--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -1,5 +1,5 @@
 <% if @research_goal %>
-  <h1>Add A New Resource for <%= @resource.title %> </h1>
+  <h1>Add A New Resource for the <%= @research_goal.name %> goal </h1>
 <% else %>
   <h1>Add A New Resource</h1>
 <% end %>
@@ -24,16 +24,28 @@
     <br>
 
     <%= f.label :key_topics %>
-    <%= f.text_field :key_topics %>
-    <br>
+    <%= f.text_field :key_topics %><br><br>
 
     <%= f.label :journal_id %>
     <br>
     <label for="journal_id">Choose existing journal: </label>
     <%= f.collection_select :journal_id, Journal.all, :id, :name, :prompt => '- Select -' %>
+    <p> --OR-- </p>
+
+    <p>Add New Journal</p>
     
-    <%= f.label :journal_id %>
-    <%= f.text_field :journal_id %>
+    <%= f.fields_for :journals do |journal| %>
+
+      <%= journal.label :name %>
+      <%= journal.text_field :name %><br>
+
+      <%= journal.label :website %>
+      <%= journal.text_field :website %><br>
+
+      <%= journal.label :open_source %>
+      <%= journal.select :open_source, [['Yes', true], ['No', false], ], { :include_blank => true } %><br>
+
+    <% end %>
 
 
     <%= f.hidden_field :research_goal_id %>
