--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
       <% if logged_in? %>
         <%= link_to "Add a Research Goal", new_research_goal_path %> | 
         <%= link_to "All Research Goals", research_goals_path %> | 
+        <%= link_to "All Resources", resources_path %> |
         <%= link_to "Logout", logout_path, method: "delete"  %>
       <% else %>
         <%= link_to "Sign Up", signup_path %> |
