--- a/app/views/research_goals/new.html.erb
+++ b/app/views/research_goals/new.html.erb
@@ -8,6 +8,9 @@
   <%= f.label :description %>
   <%= f.text_field :description %>
 
+  <%= f.label :notes %>
+  <%= f.text_field :notes %>
+
   <%= f.submit %>
 
 <% end %>
