moved scope method to application controller, removed nesting part of resources form and created index and new actions and views for journals

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,12 @@
 
     <div> 
       <% if logged_in? %>
-        <%= link_to "Add a Research Goal", new_research_goal_path %> | 
         <%= link_to "All Research Goals", research_goals_path %> | 
+        <%= link_to "Add a Research Goal", new_research_goal_path %> | 
         <%= link_to "All Resources", resources_path %> |
+        <%= link_to "Add a Resource", new_resource_path %> |
+        <%= link_to "All Journals", journals_path %> |
+        <%= link_to "Add a Journal", new_journal_path %> |
         <%= link_to "Logout", logout_path, method: "delete"  %>
       <% else %>
         <%= link_to "Sign Up", signup_path %> |
