--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -17,6 +17,21 @@
   </div>
 <% end %>
 
+<% if @resource.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(@resource.errors.count, "error") %>
+      prohibited this resource from being saved:
+    </h2>
+ 
+    <ul>
+    <% @resource.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_for ([@research_goal, @resource]) do |f| %>
   
     <%= f.label :title %>
