--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -17,38 +17,6 @@
   </div>
 <% end %>
 
-<% if @resource.errors.any? %>
-  <div id="error_explanation">
-    <h2>
-      <%= pluralize(@resource.errors.count, "error") %>
-      prohibited this resource from being saved:
-    </h2>
- 
-    <ul>
-    <% @resource.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
-
 <%= form_for ([@research_goal, @resource]) do |f| %>
-  
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-    <br>
-
-    <%= f.label :key_topics %>
-    <%= f.text_field :key_topics %><br><br>
-
-    <%= f.label :journal_id %>
-    <br>
-    <label for="journal_id">Choose existing journal: </label>
-    <%= f.collection_select :journal_id, Journal.all, :id, :name, :prompt => '- Select -' %>
-
-    <%= f.hidden_field :research_goal_id %>
-    <br>
-  
-  <%= f.submit "Add Resource" %>
-   
+  <%= render 'form', f: f %>
 <% end %>
