--- a/app/views/journals/edit.html.erb
+++ b/app/views/journals/edit.html.erb
@@ -1,17 +1,8 @@
 <h1>Edit <%= @journal.name %></h1>
+<p>Website: <%= @journal.website %></p>
+
 
 <%= form_for @journal do |f| %>
-
-        <%= f.label :name %>
-        <%= f.text_field :name %><br>
-
-        <%= f.label :website %>
-        <%= f.text_field :website %><br>
-
-        <%= f.label :open_source %>
-        <%= f.select :open_source, [['Yes', true], ['No', false], ], { :include_blank => true } %><br>
-        <br>
-
-      <%= f.submit "Update Journal" %>
-
+  <%= render 'form', f: f %>
+  <%= f.submit "Update Journal" %>
 <% end %>
