--- a/app/views/journals/index.html.erb
+++ b/app/views/journals/index.html.erb
@@ -3,6 +3,6 @@
 
 <ul>
 <% @journals.each do |journal| %>
-  <li><%=journal.id%><%= journal.name %> | <%= link_to journal.website, journal.website if journal.website %> | <%= link_to "edit", "/journals/#{journal.id}/edit"%></li>
+  <li><%= journal.name %> | <%= link_to journal.website, journal.website if journal.website %> | Open source: <%= journal.open_source? %> | <%= link_to "edit", "/journals/#{journal.id}/edit"%></li>
 <% end %>
 </ul>
