--- a/app/views/journals/new.html.erb
+++ b/app/views/journals/new.html.erb
@@ -16,17 +16,6 @@
 <% end %>
 
 <%= form_for @journal do |f| %>
-
-        <%= f.label :name %>
-        <%= f.text_field :name %><br>
-
-        <%= f.label :website %>
-        <%= f.text_field :website %><br>
-
-        <%= f.label :open_source %>
-        <%= f.select :open_source, [['Yes', true], ['No', false], ], { :include_blank => true } %><br>
-        <br>
-
-      <%= f.submit "Add Journal" %>
-
+  <%= render 'form', f: f %>
+  <%= f.submit "Add Journal" %>
 <% end %>
