--- a/app/views/research_goals/new.html.erb
+++ b/app/views/research_goals/new.html.erb
@@ -16,16 +16,5 @@
 <% end %>
 
 <%= form_for(@research_goal) do |f| %>
-  
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-
-  <%= f.label :description %>
-  <%= f.text_field :description %>
-
-  <%= f.label :notes %>
-  <%= f.text_field :notes %>
-
-  <%= f.submit %>
-
+    <%= render 'form', f: f %>
 <% end %>
