--- a/app/views/resources/edit.html.erb
+++ b/app/views/resources/edit.html.erb
@@ -18,40 +18,5 @@
 <% end %>
 
 <%= form_for ([@research_goal, @resource]) do |f| %>
-  
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-    <br>
-
-    <%= f.label :key_topics %>
-    <%= f.text_field :key_topics %><br><br>
-
-    <%= f.label :website %>
-    <%= f.text_field :website %>
-    <br>
-
-    <%= f.label :notes %>
-    <%= f.text_area :notes %>
-    <br><br>
-
-    <%= f.fields_for :journal do |journal_builder| %>
-      <fieldset>
-        <legend>Journal</legend>
-        <%= journal_builder.label :name %>
-        <%= journal_builder.text_field :name %><br>
-
-        <%= journal_builder.label :website %>
-        <%= journal_builder.text_field :website %><br>
-
-        <%= journal_builder.label :open_source %>
-        <%= journal_builder.select :open_source, [['Yes', true], ['No', false], ], { :include_blank => true } %><br>
-      </fieldset> 
-    <% end %>
-
-
-    <%= f.hidden_field :research_goal_id %>
-    <br>
-  
-  <%= f.submit "Edit Resource" %>
-   
+    <%= render 'form', f: f %>  
 <% end %>
