moved display of research goals and resources for show and edit to partials

--- a/app/views/resources/edit.html.erb
+++ b/app/views/resources/edit.html.erb
@@ -17,6 +17,8 @@
   </div>
 <% end %>
 
+<%= render 'display'%>
+
 <%= form_for ([@research_goal, @resource]) do |f| %>
     <%= render 'form', f: f %>  
 <% end %>
