--- a/app/views/research_goals/edit.html.erb
+++ b/app/views/research_goals/edit.html.erb
@@ -1,9 +1,6 @@
 <h1>Edit <%= @research_goal.name %> research goal</h1>
 
-<p><%= @research_goal.description %></p>
-
-<h2>Notes</h2>
-<%= @research_goal.notes %>
+<%= render 'display'%>
 
 <%= form_for(@research_goal) do |f| %>
     <%= render 'form', f: f %>
