--- a/app/views/research_goals/show.html.erb
+++ b/app/views/research_goals/show.html.erb
@@ -4,7 +4,4 @@
 <%= link_to 'Edit this goal', edit_research_goal_path(@research_goal) %> |
 <%= link_to 'Add new resource', new_research_goal_resource_path(@research_goal) %>
 
-<p><%= @research_goal.description %></p>
-
-<h2>Notes</h2>
-<%= @research_goal.notes %>
+<%= render 'display'%>
