--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -6,8 +6,7 @@ Paper published at <%= link_to @resource.journal.name, @resource.journal.website
    | Find resource <%= link_to "Here", @resource.website %>
 <% end %>
 
-<p>Part of the <%= @resource.research_goal.name %> research goal</p>
-<p>Key topics: <%=@resource.key_topics%></p>
+<%= render 'display'%>
 
 <h2>Notes</h2>
 <%= @resource.notes %>
