--- a/app/views/resources/edit.html.erb
+++ b/app/views/resources/edit.html.erb
@@ -5,17 +5,9 @@
 <% end %>
 
 <%# move this to a partial %>
-<% if @resource.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@resource.errors.count, "error") %> prohibited this resource from being saved:</h2>
- 
-    <ul>
-    <% @resource.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
+<h1>Edit <%= @resource.title %></h1>
+
+<%= render '/errors/error', object: @resource %>
 
 <%= render 'display'%>
 
