--- a/app/views/journals/new.html.erb
+++ b/app/views/journals/new.html.erb
@@ -1,19 +1,6 @@
 <h1>Add Journal</h1>
 
-<% if @journal.errors.any? %>
-  <div id="error_explanation">
-    <h2>
-      <%= pluralize(@journal.errors.count, "error") %>
-      prohibited this journal from being saved:
-    </h2>
- 
-    <ul>
-    <% @journal.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
+<%= render '/errors/error', object: @journal %>
 
 <%= form_for @journal do |f| %>
   <%= render 'form', f: f %>
