--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -16,6 +16,9 @@
     </ul>
   </div>
 <% end %>
+<h1>Add a New Resource</h1>
+
+<%= render '/errors/error', object: @resource %>
 
 <%= form_for ([@research_goal, @resource]) do |f| %>
   <%= render 'form', f: f %>
