added bootstrap, and navbar partial

--- a/app/views/journals/index.html.erb
+++ b/app/views/journals/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All Journals</h1>
-<%= link_to "Add Journal", new_journal_path%>
+<div><%= link_to "Add Journal", new_journal_path%></div><br>
 
 <ul>
 <% @journals.each do |journal| %>
