--- a/app/views/research_goals/_form.html.erb
+++ b/app/views/research_goals/_form.html.erb
@@ -1,11 +1,11 @@
   
   <%= f.label :name %>
-  <%= f.text_field :name %>
+  <%= f.text_field :name %><br>
 
   <%= f.label :description %>
-  <%= f.text_field :description %>
+  <%= f.text_field :description %><br>
 
   <%= f.label :notes %>
-  <%= f.text_field :notes %>
+  <%= f.text_field :notes %><br>
 
   <%= f.submit %>
