--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -6,6 +6,5 @@
 
 <%= render '/errors/error', object: @resource %>
 
-<%= form_for ([@research_goal, @resource]) do |f| %>
-  <%= render 'form', f: f %>
-<% end %>
+<%= render 'form' %>
+
