added journal seeds, added link for a new research goal in the nav bar.

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,6 +10,9 @@
             <a class="nav-link" href="<%=research_goals_path%>">All Research Goals <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" href="<%=new_research_goal_path%>">Add Research Goal</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="<%=resources_path%>">All Resources</a>
         </li>
         <li class="nav-item">
