--- a/app/views/research_goals/new.html.erb
+++ b/app/views/research_goals/new.html.erb
@@ -2,6 +2,4 @@
 
 <%= render '/errors/error', object: @research_goal %>
 
-<%= form_for(@research_goal) do |f| %>
-    <%= render 'form', f: f %>
-<% end %>
+    <%= render 'form' %>
