--- a/app/views/journals/_form.html.erb
+++ b/app/views/journals/_form.html.erb
@@ -1,10 +1,19 @@
 
-    <%= f.label :name %>
-    <%= f.text_field :name %><br>
+<div>
+  <%= form_for @journal do |f| %>
+    <div class="container center" class="form-group" >
+      <div>
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "form-control" %><br>
+      </div>
+      <%= f.label :website %>
+      <%= f.text_field :website, class: "form-control" %><br>
+      <div>
+      <%= f.label :open_source %>
+      <%= f.select :open_source, [['Yes', true], ['No', false], ], { :include_blank => true }, class: "form-control" %><br>
+      </div>
+      <%= f.submit %>
+    </div>
+  <% end %>
+</div>
 
-    <%= f.label :website %>
-    <%= f.text_field :website %><br>
-
-    <%= f.label :open_source %>
-    <%= f.select :open_source, [['Yes', true], ['No', false], ], { :include_blank => true } %><br>
-    <br>
