--- a/app/views/journals/edit.html.erb
+++ b/app/views/journals/edit.html.erb
@@ -3,7 +3,4 @@
 
 <%= render '/errors/error', object: @journal %>
 
-<%= form_for @journal do |f| %>
-  <%= render 'form', f: f %>
-  <%= f.submit "Update Journal" %>
-<% end %>
+<%= render 'form' %>
