--- a/app/views/journals/new.html.erb
+++ b/app/views/journals/new.html.erb
@@ -2,7 +2,5 @@
 
 <%= render '/errors/error', object: @journal %>
 
-<%= form_for @journal do |f| %>
-  <%= render 'form', f: f %>
-  <%= f.submit "Add Journal" %>
-<% end %>
+<%= render 'form' %>
+
