--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,18 +2,22 @@
 
 <%= render '/errors/error', object: @user %>
 
+<div>
 <%= form_for(@user, url:'/signup') do |f| %>
-  
-  <%= f.label :user_name %>
-  <%= f.text_field :user_name %>
-  <br>
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-  <br>
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-  <br>
-
-  <%= f.submit "Submit" %>
-
-<% end %>
+  <div class="container center" class="form-group" >
+    <div>  
+      <%= f.label :user_name %>
+      <%= f.text_field :user_name, class: "form-control" %>
+    </div>
+    <div>
+      <%= f.label :password %>
+      <%= f.password_field :password, class: "form-control" %>
+    </div>
+    <div>
+    <%= f.label :email %>
+    <%= f.text_field :email, class: "form-control" %>
+    </div>
+    <%= f.submit "Submit" %>
+  </div>
+  <% end %>
+</div>
