--- a/app/views/research_goals/_display.html.erb
+++ b/app/views/research_goals/_display.html.erb
@@ -1,5 +1,10 @@
 <p><%= @research_goal.description %></p>
 
 <h2>Notes</h2>
-<%= link_to 'Add a note for this research goal', new_research_goal_research_goal_note_path(@research_goal) %>
-<div><%= @research_goal.notes %></div>
+<%= link_to 'Add a note for this research goal', new_research_goal_research_goal_note_path(@research_goal) %><br><br>
+
+<div>
+  <% @research_goal.research_goal_notes.each do |note| %>
+    <li><%= note.title %> -- <%= note.content %></li>
+  <% end %>
+</div>
