--- a/app/views/resources/_display.html.erb
+++ b/app/views/resources/_display.html.erb
@@ -5,3 +5,10 @@
 <% end %>
 
 <h2>Notes</h2>
+<%= link_to 'Add a note for this resource', new_resource_resource_note_path(@resource) %><br><br>
+
+<div>
+  <% @resource.resource_notes.each do |note| %>
+    <li><%= note.title %> -- <%= note.content %></li>
+  <% end %>
+</div>
