add edit route for resource notes. Add edit links in note list

--- a/app/views/resources/_display.html.erb
+++ b/app/views/resources/_display.html.erb
@@ -10,6 +10,6 @@
 
 <div>
   <% @resource.resource_notes.each do |note| %>
-    <li><%= note.title %> -- <%= note.content %></li>
+    <li><%= note.title %> -- <%= note.content %> <%=link_to 'edit', edit_resource_resource_note_path(note)%></li>
   <% end %>
 </div>
