--- a/app/views/research_goal_notes/edit.html.erb
+++ b/app/views/research_goal_notes/edit.html.erb
@@ -1,4 +1,5 @@
-<br><h3>Edit <%= @research_goal_note.title %> note</h3><br><br>
+<br><h3>Edit <%= @research_goal_note.title %> note</h3>
+<%= link_to "Delete Note", research_goal_research_goal_note_path(@research_goal, @research_goal_note), data: { method: :delete } %><br><br>
 
 <%= render '/errors/error', object: @research_goal_note %>
 
