add link to delete a research goal, move link to add resource for research goal to associated resource page

--- a/app/views/research_goals/show.html.erb
+++ b/app/views/research_goals/show.html.erb
@@ -2,5 +2,5 @@
 
 <%= link_to 'See resources for this goal', research_goal_resources_path(@research_goal) %> |
 <%= link_to 'Edit this goal', edit_research_goal_path(@research_goal) %> |
-<%= link_to 'Add new resource', new_research_goal_resource_path(@research_goal) %>
+<%= link_to 'Delete this goal',  research_goal_path(@research_goal), data: { method: :delete } %>
 <%= render 'display'%>
