add white space around link to add a new research goal

--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,8 +1,10 @@
-<h1>Resources
-  <% if @research_goal %>
-   for <%= @research_goal.name%>
-  <% end %>
-</h1>
+<% if @research_goal %>
+  <h1>Resources for <%= @research_goal.name%> </h1>
+  <%= link_to 'Add resource for this goal', new_research_goal_resource_path(@research_goal)%><br><br>
+<% else %>
+  <h1>Resources</h1>
+<% end %>
+
 
 <% @resources.all.each do |resource| %>
   <li><%= link_to resource.title, resource_path(resource) %> -- <%= resource.key_topics %></li>
