--- a/app/views/resources/_display.html.erb
+++ b/app/views/resources/_display.html.erb
@@ -5,18 +5,19 @@
     <%= link_to 'Go directly to resource on publisher site', @resource.website %> 
   <% end %>
 </section><br>
+
 <section>
   <h5>Resource Information</h5>
   <p>Part of the <%= @resource.research_goal.name %> research goal</p>
   <p>Key topics: <%=@resource.key_topics%></p>
 </section>
 
-<h2>Notes</h2>
-
-<%= link_to 'Add a note for this resource', new_resource_resource_note_path(@resource) %><br><br>
-
-<div>
-  <% @resource.resource_notes.each do |note| %>
-    <li><%= note.title %> -- <%= note.content %> <%=link_to 'edit', edit_resource_resource_note_path(@resource, note)%></li>
-  <% end %>
-</div>
+<section>
+  <h2>Notes</h2>
+  <%= link_to 'Add a note for this resource', new_resource_resource_note_path(@resource) %><br><br>
+  <div>
+    <% @resource.resource_notes.each do |note| %>
+      <li><%= note.title %> -- <%= note.content %> <%=link_to 'edit', edit_resource_resource_note_path(@resource, note)%></li>
+    <% end %>
+  </div>
+</section>
