add semantic html to nav link

--- a/app/views/journals/index.html.erb
+++ b/app/views/journals/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All Journals</h1>
-<div><%= link_to "Add Journal", new_journal_path%></div><br>
+<nav><%= link_to "Add Journal", new_journal_path%></nav><br>
 
 <ul>
 <% @journals.each do |journal| %>
