--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
       <%= render '/layouts/navbar' %>
 
   
-      <div>
+      <section>
         <%= flash[:message] if flash[:message]%>
         <%= @error %>
-      </div>
+      </section>
       
 
       <%= yield %>
