change div to form for better semantics

--- a/app/views/research_goal_notes/_form.html.erb
+++ b/app/views/research_goal_notes/_form.html.erb
@@ -1,5 +1,5 @@
  
-<div>
+<form>
   <%= form_for ([@research_goal, @research_goal_note]) do |f| %>
     <div class="container center" class="form-group" >
       <div>
@@ -13,4 +13,4 @@
       <%= f.submit %>
     </div>
   <% end %>
-</div>
+</form>
