add error display for research goal notes

--- a/app/views/research_goal_notes/new.html.erb
+++ b/app/views/research_goal_notes/new.html.erb
@@ -5,6 +5,4 @@
   <h1>Research Goal not found</h1>
 <% end %>
 
-<%# <%= render '/errors/error', object: @resource %>
-
-
+<%= render '/errors/error', object: @research_goal_note %>
